# persistent_config

./: .gitignore  Cargo.toml  MyConfig.toml  custom_patata.yaml
examples/cooking_recipes/: Cargo.toml
examples/cooking_recipes/.config/: RecipeBook.toml
examples/cooking_recipes/my_custom_config_dir/: recipe_book.yaml
examples/cooking_recipes/src/: main.rs
examples/derive/: Cargo.toml
examples/derive/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/.config/: AppConfig.toml
examples/simple/src/: main.rs
persistent_config/: Cargo.toml  LICENSE  README.md
persistent_config/examples/: simple.rs
persistent_config/src/: lib.rs
persistent_config_core/: Cargo.toml  README.md
persistent_config_core/src/: lib.rs
persistent_config_macros/: Cargo.toml  README.md
persistent_config_macros/src/: lib.rs
src/: lib.rs
