
[lib]
proc-macro = false

[package]
name = "persistent_config"
version = "0.1.0"
edition = "2024"

[dependencies]

persistent_config_macros = { path = "../persistent_config_macros", optional = true }
persistent_config_core = { path = "../persistent_config_core", optional = false }

anyhow = "1.0.98"
serde_json = "1.0.140"
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"

[features]
default = []                              # This is the default set of features
derive = ["dep:persistent_config_macros"]
