[package]
name = "persistent_config_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
persistent_config_core = { path = "../persistent_config_core" }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
